# hypervox

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html
.cargo/: config.toml
.github/workflows/: expr.yml  expr_base_benchmarks.yml  expr_pr_benchmarks.yml  expr_pr_benchmarks_closed.yml  hypervox.yml  pages.yml  rust.yml
.github/workflows/expr/: base_benchmarks.yml  pr_benchmarks.yml  pr_benchmarks_closed.yml
expr/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
expr/benches/: bench_expr.rs
expr/src/: errors.rs  index_set.rs  lib.rs  node.rs  parse.rs
expr/src/index_set/: arith.rs  mod.rs
expr/tests/: expr.rs  ext_fn.rs  set.rs
src/: expr.rs  generate.rs  main.rs  math.rs  mesh.rs  ui.rs  utils.rs
