[package]
name = "ndvoxgcalc"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 16
panic = "abort"
debug = false
overflow-checks = false

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_ui_render",
    "default_font",
    "bevy_log",
] }
bevy_panorbit_camera = "0.34.0"
rand = "0.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_ui_render",
    "default_font",
    "bevy_log",
    "x11",
    "wayland",
] }
rayon = "1.10"
num_cpus = "1.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_ui_render",
    "default_font",
    "bevy_log",
    "bevy_winit",
    "webgl2",
] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
wasm-bindgen = "=0.2.117"
js-sys = "=0.3.94"
web-sys = "=0.3.94"
wasm-bindgen-futures = "=0.4.67"
