[package]
name = "hypervox_expr"
version = "0.1.0"
edition = "2024"
description = "High-performance mathematical expression parser, AST optimizer (constant folding, CSE), and closure compiler with multi-dimensional invariant hoisting"
authors = ["timasoft <tima.klester@yandex.ru>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/timasoft/hypervox"
keywords = ["math", "expression", "parser", "compiler", "cse"]
categories = ["mathematics", "parsing", "algorithms"]

[dependencies]
