[package]
name = "hypervox_expr"
version = "0.1.0"
edition = "2024"
description = "High-performance mathematical expression parser, AST optimizer (constant folding, CSE), and closure compiler with multi-dimensional invariant hoisting"
authors = ["timasoft <tima.klester@yandex.ru>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/timasoft/hypervox"
homepage = "https://github.com/timasoft/hypervox/tree/main/expr"
documentation = "https://docs.rs/hypervox_expr"
keywords = ["math", "expression", "parser", "compiler", "cse"]
categories = ["mathematics", "parsing", "algorithms"]

[features]
slow-benches = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
evalexpr = "13"

[[bench]]
name = "bench_expr"
harness = false
